<resources>
    <string name="app_name">examen</string>
    <string name="search">Buscar</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>

    <string name="proyecto2">Proyecto 2: Series</string>
    <string name="proyecto1">Proyecto 1: Letras</string>
    <string name="error_empty">Campo requerido</string>
    <string name="title_activity_lyrics">Lyrics</string>
    <string name="error_service">Error: no se pudo conectar al servidor</string>
    <string name="mis_letras">Mis letras</string>
    <string name="title_letras">Letras de canciones</string>
    <string name="delete">Borrar canción</string>
    <string name="success">Canción guardada exitosamente</string>
    <string name="question">¿Esta seguro que desea borrar esta canción?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="title_activity_series">Series</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_misletras_list">Letra</string>
    <string name="title_misletras_detail">MisLetras Detail</string>
    <string name="title_activity_letra">Letra</string>
    <string name="error_short_name">campo muy corto</string>
</resources>
